# xquic

./: .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakeOptions.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cert_Comp.md  README.md  SECURITY.md  bssl_symbols.txt  build_seastar.sh  server.key  xqc_build.sh  xqc_configure.h.in
cmake/: CMakeLists.txt  Config.cmake.in  FindCUnit.cmake  FindLibEvent.cmake  FindSSL.cmake  FindSphinx.cmake
demo/: CMakeLists.txt  common.c  common.h  demo_client.c  demo_server.c  demo_simple_io_client.c  demo_simple_io_server.c  xqc_hq.h  xqc_hq_conn.c  xqc_hq_conn.h  xqc_hq_ctx.c  xqc_hq_ctx.h  xqc_hq_defs.h  xqc_hq_request.c  xqc_hq_request.h  xqc_webtransport.h
demo/XQUICAndroidDemo/: .gitignore  settings.gradle
demo/XQUICAndroidDemo/app/: build.gradle
demo/XQUICAndroidDemo/app/src/main/: AndroidManifest.xml
demo/XQUICAndroidDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.c
demo/XQUICAndroidDemo/app/src/main/cpp/include/: client_send_main.h  global_common.h  xqc_common.h
demo/XQUICAndroidDemo/app/src/main/cpp/src/: client_send_main.c
demo/XQUICAndroidDemo/app/src/main/java/nativejni/: SendConfig.java  SendNative.java
demo/XQUICAndroidDemo/app/src/main/res/layout/: activity_main.xml
demo/XQUICAndroidDemo/app/src/main/res/values-night/: themes.xml
demo/XQUICAndroidDemo/gradle/wrapper/: gradle-wrapper.properties
doc/: CMakeLists.txt
doc/cfg/: cid.cfg  conn.cfg  xquic.cfg
doc/requirements/: development.txt  production.txt
doc/source/: api_refer.rst  conf.py  index.rst  platform.rst  quickstart.rst  test_params.rst  test_xquic.rst
docs/: API.md  (+3 more)
mini/: CMakeLists.txt  common.c  common.h  mini_client.c  mini_client.h  mini_client_cb.c  mini_client_cb.h  mini_server.c  mini_server.h  mini_server_cb.c  mini_server_cb.h
moq/: CMakeLists.txt  xqc_moq.h
moq/demo/: CMakeLists.txt  xqc_moq_audiodemo_server.c  xqc_moq_clock_client.c  xqc_moq_clock_server.c  xqc_moq_default_demo_client.c  xqc_moq_default_demo_server.c  xqc_moq_demo_client.c  xqc_moq_demo_comm.c  xqc_moq_demo_comm.h  xqc_moq_demo_relay.c  xqc_moq_demo_relay_client.c  xqc_moq_demo_relay_test_server.c  xqc_moq_demo_relay_v14.c  xqc_moq_demo_server.c  xqc_moq_feedback_client.c  xqc_moq_feedback_server.c  xqc_moq_interop_client.c
moq/moq_media/: xqc_moq_av_frame_ext.c  xqc_moq_av_frame_ext.h  xqc_moq_catalog.c  xqc_moq_catalog.h  xqc_moq_container.h  xqc_moq_container_loc.c  xqc_moq_container_loc.h  xqc_moq_datachannel.c  xqc_moq_datachannel.h  xqc_moq_media_track.c  xqc_moq_media_track.h
moq/moq_media/dejitter/: xqc_moq_av_dejitter.c  xqc_moq_av_dejitter.h
moq/moq_media/dejitter/video/: xqc_moq_jitter_buffer.c  xqc_moq_jitter_buffer.h  xqc_moq_video_frame_buffer.c  xqc_moq_video_frame_buffer.h
moq/moq_transport/: xqc_moq_auth_token.c  xqc_moq_auth_token.h  xqc_moq_bitrate_allocator.c  xqc_moq_bitrate_allocator.h  xqc_moq_datagram.c  xqc_moq_datagram.h  xqc_moq_default_track.c  xqc_moq_default_track.h  xqc_moq_fb_report.c  xqc_moq_fb_report_gen.c  xqc_moq_fb_report_gen.h  xqc_moq_fec.c  xqc_moq_fec.h  xqc_moq_feedback_decision.c  xqc_moq_feedback_decision.h  xqc_moq_feedback_track.c  xqc_moq_feedback_track.h  xqc_moq_feedback_tracker.c  xqc_moq_feedback_tracker.h  xqc_moq_message.c  xqc_moq_message.h  xqc_moq_message_handler.c  xqc_moq_message_handler.h  xqc_moq_message_writer.c  xqc_moq_message_writer.h  xqc_moq_namespace.c  xqc_moq_namespace.h  xqc_moq_proxy.c  xqc_moq_proxy.h  xqc_moq_session.c  xqc_moq_session.h  xqc_moq_stream.c  xqc_moq_stream.h  xqc_moq_stream_quic.c  xqc_moq_stream_quic.h  xqc_moq_stream_webtransport.c  xqc_moq_stream_webtransport.h  xqc_moq_subscribe.c  xqc_moq_subscribe.h  xqc_moq_track.c  (+3 more)
moq/tests/: CMakeLists.txt  catalog_test.c  moq_cancel_write_test.c  moq_message_test.c  test_catalog_param_e2e.sh  test_dc_catalog_switch_e2e.sh  test_goaway_e2e.sh  test_multi_ns_tuple_e2e.sh  test_reuse_subgroup_timeout_e2e.sh  test_server_cancel_write_e2e.sh  test_stream_cancel_subscribe_update_e2e.sh  test_subscribe_namespace_e2e.sh  video_jitter_buffer_test.c
src/webtransport/: CMakeLists.txt  wt_demo_server.c  wt_video_sync.cpp  wt_video_sync.h  wt_video_sync_common.h  wt_video_sync_server.cpp  xqc_webtransport_conn.c  xqc_webtransport_conn.h  xqc_webtransport_ctx.c  xqc_webtransport_ctx.h  xqc_webtransport_defs.c  xqc_webtransport_defs.h  xqc_webtransport_dgram.c  xqc_webtransport_dgram.h  xqc_webtransport_request.c  xqc_webtransport_request.h  xqc_webtransport_session.c  xqc_webtransport_session.h  xqc_webtransport_stream.c  xqc_webtransport_stream.h  xqc_webtransport_wire.c  xqc_webtransport_wire.h
tests/: CLAUDE.md  CMakeLists.txt  client_ctx.h  getopt.c  getopt.h  platform.c  platform.h  seastar_integration_skill.md  server.crt  slog  test_client.c  test_client.cpp  test_server.c  test_server.cpp  user_conn.h  xquic_client.cpp  xquic_client.h  xquic_seastar_integration.hh  xquic_seastar_queue.hh  xquic_server.cpp  xquic_server.h  xquic_server_seastar.cpp  xquic_server_seastar.hh
tests/unittest/: main.c  xqc_ack_with_timestamp_test.c  xqc_ack_with_timestamp_test.h  xqc_cid_test.c  xqc_cid_test.h  xqc_coalesced_test.c  xqc_coalesced_test.h  xqc_common_test.c  xqc_common_test.h  xqc_conn_test.c  xqc_conn_test.h  xqc_crypto_frame_test.c  xqc_crypto_frame_test.h  xqc_crypto_test.c  xqc_crypto_test.h  xqc_cubic_test.c  xqc_cubic_test.h  xqc_datagram_test.c  xqc_datagram_test.h  xqc_dtable_test.c  xqc_dtable_test.h  xqc_encoder_test.c  xqc_encoder_test.h  xqc_engine_test.c  xqc_engine_test.h  xqc_fec_scheme_test.c  xqc_fec_scheme_test.h  xqc_fec_test.c  xqc_fec_test.h  xqc_flow_ctl_test.c  xqc_flow_ctl_test.h  xqc_frame_type_bit_test.c  xqc_frame_type_bit_test.h  xqc_galois_test.c  xqc_galois_test.h  xqc_h3_ext_test.c  xqc_h3_ext_test.h  xqc_h3_test.c  xqc_h3_test.h  xqc_id_hash_test.c  (+41 more)
tests/unittest/utils/: xqc_2d_hash_table_test.c  xqc_2d_hash_table_test.h  xqc_huffman_test.c  xqc_huffman_test.h  xqc_ring_array_test.c  xqc_ring_array_test.h  xqc_ring_mem_test.c  xqc_ring_mem_test.h
(+328 files in other folders)
